# ZMP

./: .gitignore
etap1/zalazek/: interp  test.cmd
etap1/zalazek/inc/: LibInterface.hh  MobileObj.hh  Scene.hh
etap1/zalazek/plugin/inc/: Interp4Move.hh  Interp4Rotate.hh  Interp4Set.hh
etap1/zalazek/plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Set.cpp
etap1/zalazek/src/: main.cpp
etap2/serwer-z-tlem/: serwer_graficzny
etap2/serwer-z-tlem/inc/: BackgroundImage.hh
etap2/serwer-z-tlem/src/: main.cpp
etap2/zalazek/: CMakeLists.txt
etap2/zalazek/config/: config.xml  config.xsd  test.cmd
etap2/zalazek/inc/: AccessControl.hh  Configuration.hh  Interp4Command.hh  LibInterface.hh  MobileObj.hh  Port.hh  ReadInter.hh  Scene.hh  Sender.hh  geomVector.hh  klient.h  xmlinterp.hh
etap2/zalazek/plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
etap2/zalazek/plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
etap2/zalazek/src/: LibInterface.cpp  MobileObj.cpp  Scene.cpp  Sender.cpp  Set4LibInterfaces.cpp  klient.cpp  main.cpp  xmlinterp.cpp
etap4/package-interp4cmds-2libs/: Makefile  config.h.in  config.status
etap4/package-interp4cmds-2libs/autom4te.cache/: output.0  requests  traces.0  traces.1
etap4/package-interp4cmds-2libs/inc/: Makefile  Makefile.in  Scene.hh  Vector3D.hh  klient.hh  xmlinterp.hh
etap4/package-interp4cmds-2libs/src/: Makefile  MobileObj.cpp  interp4cmds  klient.cpp
etap4/package-interp4cmds-2libs/src-lib/: Interp4Pause.cpp  Interp4Pause.hh  Interp4Rotate.cpp  Makefile
etap4/package-interp4cmds-2libs/src-lib/.deps/: libInterp4Move_la-Interp4Move.Plo  (+1 more)
instalacja/interp4cmds-read-1.0/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
instalacja/interp4cmds-read-1.0/inc/: Init.hh  Interp4Command.hh  Makefile  Makefile.am  Set4LibInterfaces.hh
instalacja/interp4cmds-read-1.0/src/: Init.cpp  LibInterface.cpp  Makefile  Makefile.am  Makefile.in  Sender.cpp  interp4cmds  main.cpp
instalacja/interp4cmds-read-1.0/src-lib/: Makefile  Makefile.am  Makefile.in
instalacja/interp4cmds-read-1.0/src-lib/.deps/: libInterp4Pause_la-Interp4Pause.Plo  libInterp4Rotate_la-Interp4Rotate.Plo
instalacja/interp4cmds-read-1.0/src-lib/.libs/: libInterp4Move.so.1.0.0  libInterp4Pause.so.1.0.0  libInterp4Rotate.so.1.0.0  libInterp4Set.so.1.0.0
instalacja/interp4cmds-read-1.0/src/.deps/: interp4cmds-Scene.Po  interp4cmds-Sender.Po  interp4cmds-xmlinterp.Po
lab1/: Diagram1.dia
lab1/zalazek/: Makefile  interp
lab1/zalazek/src/: main-zal.cpp  main.cpp
(+11 files in other folders)
