noinst_HEADERS= AccessControl.hh \
                geomVector.hh \
                Init.hh \
                Interp4Command.hh \
                klient.hh \
                LibInterface.hh \
                MobileObj.hh \
                Port.hh \
                Scene.hh \
                Sender.hh \
                Set4LibInterfaces.hh \
                Vector3D.hh \
                xmlinterp.hh

