lib_LTLIBRARIES = libInterp4Move.la libInterp4Pause.la libInterp4Rotate.la libInterp4Set.la

libInterp4Move_la_SOURCES = Interp4Move.cpp Interp4Move.hh
libInterp4Move_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Move_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Pause_la_SOURCES = Interp4Pause.cpp Interp4Pause.hh
libInterp4Pause_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Pause_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Rotate_la_SOURCES = Interp4Rotate.cpp Interp4Rotate.hh
libInterp4Rotate_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Rotate_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Set_la_SOURCES = Interp4Set.cpp Interp4Set.hh
libInterp4Set_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Set_la_LDFLAGS = -module -version-info 1:0:0

